Specify width on image element to avoid jumping on initial load

--- a/src/shared/components/Header.scss
+++ b/src/shared/components/Header.scss
@@ -102,7 +102,7 @@
 				}
 
 				&.current {
-					background: none;
+					background-image: none;
 				}
 
 				svg {
@@ -115,7 +115,7 @@
 					position: relative;
 					vertical-align: middle;
 					margin: -0.25em 0px 0px;
-					padding-right: 5px;
+					margin-right: 5px;
 				}
 			}
 
